Add docker install to rpi

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ roles_path = roles
 collections_path = collections
 inventory = ./inventory.yml
 show_custom_stats = yes
+vault_password_file = vault_pass.txt
