--- a/main.yml
+++ b/main.yml
@@ -1,96 +1,78 @@
-- hosts: rpi
-  name: Hello World
-  tasks:
-    - debug:
-        msg: "hello user: {{ansible_user}}"
-    - debug:
-        msg: deb [arch=arm64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
-
-# https://docs.docker.com/engine/install/debian/
-- name: Install docker on debian
+# - hosts: rpi
+#   name: Hello World
+#   tasks:
+#     - debug:
+#         msg: "hello user: {{ansible_user}}"
+#     - debug:
+#         msg: deb [arch=arm64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
+#     - debug:
+#         msg: "{{ playbook_dir }}"
+    
+- name: Install Prerequsites
   hosts: rpi
   become: true
   tasks:
-    - name: Apt - Install prerequsites
-      apt:
-        update_cache: yes
-        name: 
-          - ca-certificates
-          - curl
-          - gnupg
-          - lsb-release
-        state: present
-
-    - name: Add Docker GPG key
-      apt_key:
-        url: https://download.docker.com/linux/debian/gpg
-
-    - name: Add Docker APT repository
-      apt_repository:
-        repo: deb [arch=arm64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
-
-    - name: Install Docker CE
+    - name: Install Python3 pip
       apt:
         name: 
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-          - docker-compose-plugin
+          - python3-pip
         update_cache: yes
 
-    - name: Ensure user account has access to run docker commands
-      vars:
-        username: "{{ ansible_user }}"
-      become: true
-      user:
-        name: "{{ ansible_user }}"
-        groups: docker
-        append: true
+- name: Install docker, and pip packages
+  hosts: rpi
+  become: true
+  roles:
+    - role: home.docker
+  tasks:
+    - ansible.builtin.pip:
+        name: docker
+    - ansible.builtin.pip:
+        name: docker-compose
+
+- hosts: rpi
+  name: Install Mealie
+  roles:
+    - role: home.mealie
 
 
-# - hosts: rpi
-#   name: Install Mealie
-#   roles:
-#     - name: home.mealie
+# # - name: Install Tools
+# #   hosts: all
+# #   roles:
+# #     - role: home.neofetch
+# #     - name: Configure Oh-My-ZSH
+# #       role: gantsign.antigen_bundles
+# #       users:
+# #         - username: 
+# #           antigen_libraries:
+# #             - name: oh-my-zsh
+# #           antigen_theme:
+# #             name: gallois
+# #           antigen_bundles:
+# #             - name: git
+# #             - name: command-not-found
+# #             - name: you-should-use
+# #             - name: autojump
+# #             - name: zsh-autosuggestions
 
-# - name: Install Tools
-#   hosts: all
-#   roles:
-#     - role: home.neofetch
-#     - name: Configure Oh-My-ZSH
-#       role: gantsign.antigen_bundles
-#       users:
-#         - username: 
-#           antigen_libraries:
-#             - name: oh-my-zsh
-#           antigen_theme:
-#             name: gallois
-#           antigen_bundles:
-#             - name: git
-#             - name: command-not-found
-#             - name: you-should-use
-#             - name: autojump
-#             - name: zsh-autosuggestions
-
-# - name: Configure Local Computer
-#   hosts: localhost
-#   roles:
-#     - role: home.detect_shell
-#     - role: home.shell_config
-#       config_file_name: "{{ shell_interactive }}"
-#       aliases:
-#         - alias: ll
-#           command: ls -lh
-#         - alias: k
-#           command: kubectl
-#         - alias: python
-#           command: python3
-#       exports: 
-#         - key: PATH
-#           value: "$PATH:$HOME/.local/bin"
-#       ssh_targets:
-#         - shortcut: rpi
-#           username: "{{ hostvars.rpi.ansible_user }}"
-#           hostname: "{{ hostvars.rpi.ansible_host }}"
-#     - role: home.ssh_readiness
-#     - role: home.ssh_keys
+# # - name: Configure Local Computer
+# #   hosts: localhost
+# #   roles:
+# #     - role: home.detect_shell
+# #     - role: home.shell_config
+# #       config_file_name: "{{ shell_interactive }}"
+# #       aliases:
+# #         - alias: ll
+# #           command: ls -lh
+# #         - alias: k
+# #           command: kubectl
+# #         - alias: python
+# #           command: python3
+# #       exports: 
+# #         - key: PATH
+# #           value: "$PATH:$HOME/.local/bin"
+# #       ssh_targets:
+# #         - shortcut: rpi
+# #           username: "{{ hostvars.rpi.ansible_user }}"
+# #           hostname: "{{ hostvars.rpi.ansible_host }}"
+# #     - role: home.ssh_readiness
+# #     - role: home.ssh_keys
