--- a/roles/home.mealie/tasks/main.yml
+++ b/roles/home.mealie/tasks/main.yml
@@ -1,26 +1,37 @@
+# TODO: update mealie_data path to be a variable
 
+- ansible.builtin.file:
+    path: /home/pi/mealie_data
+    state: directory
+    mode: '0755'  
+- community.docker.docker_compose:
+    project_name: mealie
+    
+    definition:
+      version: "3.1"
+      services:
+        mealie:
+          container_name: mealie
+          image: hkotel/mealie:latest
+          restart: always
+          ports:
+            - 9925:80
+          environment:
+            PUID: 1000
+            PGID: 1000
+            TZ: America/Los_Angeles
 
-- name: install libseccomp2
-  apt:
-    deb: "{{ package_url }}"
+            # Default Recipe Settings
+            RECIPE_PUBLIC: 'true'
+            RECIPE_SHOW_NUTRITION: 'true'
+            RECIPE_SHOW_ASSETS: 'true'
+            RECIPE_LANDSCAPE_VIEW: 'true'
+            RECIPE_DISABLE_COMMENTS: 'false'
+            RECIPE_DISABLE_AMOUNT: 'false'
 
-
-# - name: Check if package is installed
-#   command: dpkg-query -W libseccomp2
-#   register: my_package_check_deb
-#   failed_when: my_package_check_deb.rc > 1
-#   changed_when: my_package_check_deb.rc == 1
-
-# - debug:
-#     msg: "{{ my_package_check_deb }}"
-# # - name: Download my_package
-#   get_url: 
-#     url="{{ package_url }}"
-#     dest="/tmp/{{ my_package_name }}.deb"
-#   when: my_package_check_deb.rc == 1
-
-# - name: Install my_package
-#   apt: deb="/tmp/{{ my_package_name }}.deb"
-#   become: true
-#   when: my_package_check_deb.rc == 1
-
+            # Gunicorn
+            # WEB_CONCURRENCY: 2
+            # WORKERS_PER_CORE: 0.5
+            # MAX_WORKERS: 8
+          volumes:
+            - /home/pi/mealie_data/:/app/data
