--- a/main.yml
+++ b/main.yml
@@ -8,6 +8,9 @@
 #     - debug:
 #         msg: "{{ playbook_dir }}"
     
+
+## ------------------------------------
+## RPI
 - name: Install Prerequsites
   hosts: rpi
   become: true
@@ -33,6 +36,31 @@
   name: Install Mealie
   roles:
     - role: home.mealie
+
+- name: Install Azure CLI, and pip packages
+  hosts: rpi
+  become: true
+  roles:
+    - name: home.az.cli
+  tasks:
+    - ansible.builtin.pip:
+        name: azure-cli
+
+- name: Ensure mealie data is backed up to azure storage account
+  hosts: rpi
+  roles:
+    - role: home.zip.backup
+      path: /home/pi/mealie_data
+      dest: /home/pi/mealie_data.tar.gz
+      username: "{{ azure.homeSPN.username }}"
+      password: "{{ azure.homeSPN.password }}"
+      tenant: "{{ azure.homeSPN.tenant }}"
+      subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
+      job_name: mealie_data
+
+
+
+## ------------------------------------
 
 
 # # - name: Install Tools
