--- a/roles/home.shell_config/defaults/main.yml
+++ b/roles/home.shell_config/defaults/main.yml
@@ -3,7 +3,7 @@ exports: []
 ssh_targets: []
 
 config_file_name: .bashrc
-config_file_path: "{{ lookup('env', 'HOME') }}/{{ config_file_name }}"
+config_file_path: "{{ ansible_env.HOME }}/{{ config_file_name }}"
 
 alias_section_name: "CUSTOM ALIASES"
 exports_section_name: "CUSTOM EXPORTS"
