--- a/roles/home.mealie/tasks/main.yml
+++ b/roles/home.mealie/tasks/main.yml
@@ -9,6 +9,10 @@
     
     definition:
       version: "3.1"
+      networks:
+        default:
+          name: lsio
+          external: true
       services:
         mealie:
           container_name: mealie
