--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,7 @@
 roles:
   - ryankwilliams.ssh_copy_id
   - gantsign.antigen_bundles
+  - cloudalchemy.node_exporter
 collections:
   - community.crypto
   - geerlingguy.mac
