--- a/roles/home.swag/meta/main.yml
+++ b/roles/home.swag/meta/main.yml
@@ -4,4 +4,4 @@
 
 galaxy_info:
   author: Brandon Abbott
-  description: Ensure target host linuxserver/swag up and running on it with a config directory.  This is a secure web application gateway
+  description: Ensure target host linuxserver/swag up and running on it with a config directory. Install Secure Web Application Gateway (swag)
