--- a/inventory.yml
+++ b/inventory.yml
@@ -3,8 +3,19 @@ all:
   hosts:
     localhost:
       ansible_connection: local
-    rpi:
-      ansible_host: 192.168.4.24
       ansible_user: pi
-      ansible_password: "{{ inventoryPasswords.rpi }}"
-      ansible_sudo_pass: "{{ inventoryPasswords.rpi }}"
+      ansible_password: "{{ inventoryPasswords.localhost }}"
+      ansible_sudo_pass: "{{ inventoryPasswords.localhost }}"
+  children:
+    remote:
+      hosts:
+        rpi:
+          ansible_host: 192.168.4.24
+          ansible_user: pi
+          ansible_password: "{{ inventoryPasswords.rpi }}"
+          ansible_sudo_pass: "{{ inventoryPasswords.rpi }}"
+        room_of_requirement:
+          ansible_host: 192.168.4.124
+          ansible_user: pabbott
+          ansible_password: "{{ inventoryPasswords.room_of_requirement }}"
+          ansible_sudo_pass: "{{ inventoryPasswords.room_of_requirement }}"
