--- a/main.yml
+++ b/main.yml
@@ -1,45 +1,38 @@
-- name: Configure Local Computer
-  hosts: room_of_requirement
-  roles:
-    - home.docker_permissions
-  environment:
-    PATH: "{{ ansible_env.PATH }}:/usr/builtin/sbin"
+# - name: Configure Local Computer
+#   hosts: room_of_requirement
+#   roles:
+#     - home.docker_permissions
+#   environment:
+#     PATH: "{{ ansible_env.PATH }}:/usr/builtin/sbin"
 
-# ------------------------------------
-# localhost
-# ------------------------------------
+# # ------------------------------------
+# # localhost
+# # ------------------------------------
 
-- name: Configure Local Computer
-  hosts: localhost
-  roles:
-    - role: home.detect_shell
-    - role: home.shell_config
-      config_file_name: "{{ shell_interactive }}"
-      aliases:
-        - alias: ll
-          command: ls -lh
-        - alias: k
-          command: kubectl
-        - alias: python
-          command: python3
-      exports: 
-        - key: PATH
-          value: "$PATH:$HOME/.local/bin"
-      ssh_targets:
-        - shortcut: rpi
-          username: "{{ hostvars.rpi.ansible_user }}"
-          hostname: "{{ hostvars.rpi.ansible_host }}"
-        - shortcut: ror
-          username: "{{ hostvars.room_of_requirement.ansible_user }}"
-          hostname: "{{ hostvars.room_of_requirement.ansible_host }}"
-    - role: home.ssh_readiness
-  tasks:
-    - name: ssh_copy_id local public key to remote host
-      include_role: 
-        name: home.copy_ssh_keys
-      vars:
-        target: "{{ hostvars[item] }}"
-      loop: "{{ groups['remote'] }}"
+# - name: Configure Local Computer
+#   hosts: localhost
+#   roles:
+#     - role: home.detect_shell
+#     - role: home.shell_config
+#       config_file_name: "{{ shell_interactive }}"
+#       aliases:
+#         - alias: ll
+#           command: ls -lh
+#         - alias: k
+#           command: kubectl
+#         - alias: python
+#           command: python3
+#       exports: 
+#         - key: PATH
+#           value: "$PATH:$HOME/.local/bin"
+#       ssh_targets:
+#         - shortcut: rpi
+#           username: "{{ hostvars.rpi.ansible_user }}"
+#           hostname: "{{ hostvars.rpi.ansible_host }}"
+#         - shortcut: ror
+#           username: "{{ hostvars.room_of_requirement.ansible_user }}"
+#           hostname: "{{ hostvars.room_of_requirement.ansible_host }}"
+#     - role: home.ssh_readiness
 
 # ------------------------------------
 # rpi
@@ -58,6 +51,8 @@
           - python3-pip
         update_cache: yes
   roles:
+    - role: home.docker_metrics
+      ip_address: "{{ ansible_host }}"
     - role: home.docker
     - role: home.docker_permissions
     - role: home.az.cli
@@ -70,6 +65,8 @@
     - ansible.builtin.pip:
         name: azure-cli
 
+    
+
 - name: Docker Installations on RPI
   hosts: rpi
   pre_tasks:
@@ -78,6 +75,9 @@
         name: lsio
   roles:
     - role: home.mealie
+    - role: home.duckdns
+    - role: home.swag
+    - role: home.prometheus-server
     - role: home.zip.backup
       path: /home/pi/mealie_data
       dest: /home/pi/mealie_data.tar.gz
@@ -86,9 +86,9 @@
       tenant: "{{ azure.homeSPN.tenant }}"
       subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
       job_name: mealie_data
-    - role: home.duckdns
-    - role: home.swag
-    - role: home.prometheus-server
-# ------------------------------------
+
+
+
+#------------------------------------
 
 
