--- a/roles/home.prometheus-server/files/prometheus.yml
+++ b/roles/home.prometheus-server/files/prometheus.yml
@@ -23,4 +23,9 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+
+  # Docker services on raspberry pi
+  - job_name: 'docker'
+    static_configs:
+      - targets: ['192.168.4.24:9323']
         
