--- a/roles/home.prometheus-server/files/prometheus.yml
+++ b/roles/home.prometheus-server/files/prometheus.yml
@@ -33,4 +33,8 @@ scrape_configs:
   - job_name: 'grafana'
     static_configs:
       - targets: ['192.168.4.24:3000']
-        
+  
+  # Network attached storage
+  - job_name: 'room_of_requirement'
+    static_configs:
+      - targets: ['192.168.4.124:9100']      
